# foo.fermyon.app

./: .gitignore  Cargo.toml  Compose.yaml  Containerfile  README.md  env  spin.toml  trigger-timer.json
apps/random-cafe/: .gitignore  Cargo.toml  dot.env.sample  spin.toml
apps/random-cafe/files/: geopoints.csv
apps/random-cafe/src/: lib.rs
assets/: upload.html
bar/: Cargo.toml  Cargo.toml~  README.md
bar/api/: Cargo.toml  migration.sql  spin.toml
bar/api/src/: cors.rs  lib.rs  models.rs
bar/frontend/: spin.toml
bar/frontend/app/: index.html
bar/src/: lib.rs  lib.rs~  test.hurl
test1/: Cargo.toml
test1/src/: lib.rs  lib.rs~
