[package]
name = "random-cafe"
authors = ["Seungjin Kim <seungjin@duck.com>"]
description = ""
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow = "1"
spin-sdk = { git = "https://github.com/fermyon/spin-rust-sdk", branch = "main" }
rand = "0.8"
crossbeam = "0.8"
csv = "1.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "*"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
bytes = "1.5"
multipart-2021 = "0.19"
futures = "0.3"
mime = "0.3"
wit-bindgen = "0.13.0"

[workspace]
